# esp32-sdd-showcase

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  spec-improvement.md
board-specs/: README.md
board-specs/adafruit/: huzzah32.md
board-specs/espressif/: esp32-c6-devkitc-1-n8.md
board-specs/seeed/: xiao-esp32c5.md  xiao-esp32c6.md  xiao-esp32s3.md
board-specs/yejmkj/: esp32-s3-devkitc-1-n16r8.md
docs/: README.md
docs/guides/: README.md  creating-new-board-specs.md  using-with-ai-agents.md
docs/reference/: README.md
docs/workflows/: README.md
examples/: README.md
examples/01-blinky/: Kconfig.projbuild  README.md  sdkconfig.defaults
examples/01-blinky-huzzah32/: README.md
examples/02-deep-sleep-timer-node/: README.md
examples/03-deep-sleep-bme280-mqtt/: README.md
examples/esp-now-low-power-mesh/main/: CMakeLists.txt  Kconfig.projbuild  gateway.c  gateway.h  main.c  mesh_common.c  mesh_common.h  mesh_types.h  relay.c  relay.h  sensor.c  sensor.h  sensor_relay.c  sensor_relay.h
shared-specs/: AIGenLessonsLearned.md  README.md  ble-patterns.md  cmake-conventions.md  coding-conventions.md  esp-idf-version.md  partition-table-profiles.md  power-budget-template.md  security-baseline.md
skills/: README.md
specs/: README.md  contributing-spec.md  documentation-generation-spec.md  example-project-structure-spec.md  repo-overview-spec.md  showcase-master-spec.md
templates/: BoardSpec.template.md  README.md
(+112 files in other folders)
